# credit-risk-ml-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-infra.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  deploy.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-solid-ground/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-RESEARCH.md  01-UAT.md
.planning/phases/02-champion-model/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
dags/: credit_risk_daily.py
db/: models.py
db/migrations/: alembic.ini  env.py
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.mlflow
docs/: ADR-001.md  architecture.md
notebooks/: eda.ipynb
scripts/: init-multiple-dbs.sh  promote_champion.py  smoke_test_cbpdd.py  train_champion.py
src/api/: db.py  main.py  preprocess.py  router.py  schemas.py
src/dashboard/: app.py  db.py
src/drift/: cb_pdd.py  scorer.py
src/simulators/: denial_loop.py  score_gaming.py
src/training/: data.py  evaluate.py  promote.py  train.py
tests/api/: conftest.py  test_health.py  test_outcome.py  test_score.py
tests/dags/: conftest.py  test_dag_structure.py
tests/drift/: EVIDENCE.txt  conftest.py  test_cb_pdd.py  test_integration.py  test_scorer.py
tests/simulators/: test_simulators.py
tests/training/: conftest.py  test_data.py  test_promote.py  test_train.py
(+10 files in other folders)
