[project]
name = "credit-risk-ml-pipeline"
version = "0.1.0"
description = "Performative drift detection using CB-PDD algorithm for credit risk ML"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]  # line length handled by black

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project.optional-dependencies]
dev = [
    "jupyter",
    "seaborn==0.13.2",
    "scipy==1.15.2",
    "matplotlib==3.8.4",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
